--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://db_lospujantes_user:94LbQYN1lctJ7PBK60vZ6PnFo6szYfTu@dpg-cvrbaqmr433s73b7p0eg-a.oregon-postgres.render.com/db_lospujantes
+DATABASE_URL=postgresql://lospujantes_user:7CMVCoxWvPFgvNdKdsbeBeZ7sO3M8ghz@dpg-d00ihmidbo4c7393gn00-a.oregon-postgres.render.com/lospujantes
